[gd_scene load_steps=4 format=2]

[ext_resource path="res://UnusedNodes/JuiceBarr/JuiceBarr.gd" type="Script" id=2]
[ext_resource path="res://UnusedNodes/JuiceBarr/mask.png" type="Texture" id=3]
[ext_resource path="res://UnusedNodes/JuiceBarr/fruitMetterTest.png" type="Texture" id=4]


[node name="JuiceBarr" type="Node2D"]
position = Vector2( 248.544, 324.654 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="BackgroundUnder" type="ColorRect" parent="."]
modulate = Color( 0.831373, 1, 1, 0.160784 )
show_behind_parent = true
light_mask = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundOver" type="ColorRect" parent="."]
modulate = Color( 0.0235294, 0.568627, 0.968627, 1 )
show_behind_parent = true
light_mask = 2
margin_left = -23.0
margin_top = -72.0
margin_right = 23.0
margin_bottom = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundOverPos" type="Position2D" parent="."]
show_behind_parent = true

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 3 )
mode = 3
range_item_cull_mask = 2

[node name="TopPos" type="Position2D" parent="."]
position = Vector2( 0, -228 )

[node name="BottomPos" type="Position2D" parent="."]
position = Vector2( 0, 223.667 )

[node name="Tween" type="Tween" parent="."]
